[gd_scene load_steps=2 format=3 uid="uid://c1j5yvbqn8r2d"]

[ext_resource type="Script" path="res://scripts/ui/game_summary.gd" id="1_lfm2q"]

[node name="GameSummary" type="CanvasLayer"]
script = ExtResource("1_lfm2q")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Game Summary"
horizontal_alignment = 1

[node name="ResultLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Victory!"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SeedsPlantedLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Seeds Planted: 0"

[node name="ResourcesLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Resources Gathered: 0"

[node name="EnemiesLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Enemies Defeated: 0"

[node name="BossesLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Bosses Defeated: 0"

[node name="DamageLabel" type="Label" parent="Panel/VBoxContainer/StatsContainer"]
layout_mode = 2
text = "Damage Taken: 0"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Return to Main Menu"

[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]